--- a/.github/workflows/lambda.yaml
+++ b/.github/workflows/lambda.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'lambda/'
+      - 'lambda/**'
 
 jobs: 
   deploy-lambda:
@@ -20,10 +20,10 @@ jobs:
 
       - name: Install Dependencies # Installs any packages
         run: |
-          python -m pip install --upgradepip
+          python -m pip install --upgrade pip
           pip install -r lambda/requirements.txt -t lambda/ 
 
-      - name: Configure AWS Creds # Sets up our AWS credentials
+      - name: Configure AWS credentials # Sets up our AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-acces-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
