--- a/.github/workflows/lambda.yaml
+++ b/.github/workflows/lambda.yaml
@@ -9,29 +9,29 @@ on:
 
 jobs: 
   deploy-lambda:
-    runs-on: ubuntu-latest # Sets or specifies runner
+    runs-on: ubuntu-latest # Specifies the runner
     steps:
       - uses: actions/checkout@v2
         
-      - name: Set up Python # Sets up python env.
-        uses: actions/setup-python
+      - name: Set up Python # Sets up python environment
+        uses: actions/setup-python@v4
         with:
           python-version: '3.12'
 
       - name: Install Dependencies # Installs any packages
         run: |
           python -m pip install --upgrade pip
-          pip install -r lambda/requirements.txt -t lambda/ 
+          pip install -r lambda/requirements.txt -t lambda/
 
-      - name: Configure AWS credentials # Sets up our AWS credentials
+      - name: Configure AWS credentials # Sets up AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-acces-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Deploy Lambda Function #Zips lambda directory and updates lambda function
+      - name: Deploy Lambda Function # Zips lambda directory and updates lambda function
         run: |
-          cd lambda   
+          cd lambda
           zip -r lambda.zip .
           aws lambda update-function-code --function-name my-test-cicd-lambda --zip-file fileb://lambda.zip
