--- a/.github/workflows/cfn-validate-pr.yml
+++ b/.github/workflows/cfn-validate-pr.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-acces-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           region: us-east-1
 
@@ -50,7 +50,7 @@ jobs:
       - name: configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-acces-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           region: us-east-1
 
