--- a/cloudformation/s3-bucket.yml
+++ b/cloudformation/s3-bucket.yml
@@ -19,7 +19,7 @@ Resources:
       - Key: Environment
         Value: !Ref Environment
       - Key: Environment
-        Value: GithubActionsTesting
+        Value: GithubActionsTesting1
 
   Outputs:  
     BucketName:
