--- a/.github/workflows/cfn-validate-pr.yml
+++ b/.github/workflows/cfn-validate-pr.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          region: us-east-1
+          region: eu-west-2
 
       - name: Validate CloudFormation template
         run: |
@@ -52,7 +52,7 @@ jobs:
         with:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          region: us-east-1
+          region: eu-west-2
 
       - name: Delete Test Stack
         run: |
